--- a/src/Components/Buttons/Button.css
+++ b/src/Components/Buttons/Button.css
@@ -1,9 +1,8 @@
 .feedbackbtncss{
-  width: Hug (170px)px;
+    width: Hug (170px)px;
 height: Hug (47px)px;
 top: 13px;
- background: #121212  !important;
-border: 1px solid #34C94B ;
+left: 1238px;
 padding: 10px 16px 10px 16px;
 gap: 10px;
 border-radius: 12px 0px 0px 0px;
